force-app/main/default/objects/Log__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client the log refers to</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logs (Client)</relationshipLabel>
    <relationshipName>LogsClient</relationshipName>
    <type>Lookup</type>
</CustomField>