force-app/main/default/objects/Log__c/fields/ClientHours__c.field-meta.xml
<CustomField>
    <fullName>ClientHours__c</fullName>
    <description
    >Number of hours the Team Facilitator has worked with the client since the last log</description>
    <label>Hours Worked with Client</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>