force-app/main/default/objects/Log__c/fields/ClientStress__c.field-meta.xml
<CustomField>
    <fullName>ClientStress__c</fullName>
    <label>Client Stress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Stress</valueSetName>
    </valueSet>
</CustomField>