force-app/main/default/objects/Log__c/fields/DidMeetThisWeek__c.field-meta.xml
<CustomField>
    <fullName>DidMeetThisWeek__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you meet with your TF this week?</label>
    <type>Checkbox</type>
</CustomField>