force-app/main/default/objects/Log__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Dog the log is referring to</description>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>