force-app/main/default/objects/Log__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Facilitator the log is referring to</description>
    <label>Team Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logs (Team Facilitator)</relationshipLabel>
    <relationshipName>LogsFacilitator</relationshipName>
    <type>Lookup</type>
</CustomField>