force-app/main/default/objects/Log__c/fields/FirstAidDetails__c.field-meta.xml
<CustomField>
    <fullName>FirstAidDetails__c</fullName>
    <description>Details of First Aid session</description>
    <label>First Aid Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>
    