force-app/main/default/objects/Log__c/fields/FirstAidSuppliesUsed__c.field-meta.xml
<CustomField>
    <fullName>FirstAidSuppliesUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you use First Aid Supplies?</label>
    <type>Checkbox</type>
</CustomField>