force-app/main/default/objects/Log__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>Handler(s) the log pertains to</description>
    <label>Handler(s)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>