force-app/main/default/objects/Log__c/fields/Other_Hours__c.field-meta.xml
<CustomField>
    <fullName>Other_Hours__c</fullName>
    <label>Other Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>