force-app/main/default/objects/Log__c/fields/OtherHours__c.field-meta.xml
<CustomField>
    <fullName>OtherHours__c</fullName>
    <label>Other Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>