force-app/main/default/objects/Log__c/fields/PublicAccessHours__c.field-meta.xml
<CustomField>
    <fullName>PublicAccessHours__c</fullName>
    <description>Number of Public Access Hours</description>
    <label># Public Access Hours</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>