force-app/main/default/objects/Log__c/fields/Request_support_from_Atlas__c.field-meta.xml
<CustomField>
    <fullName>Request_support_from_Atlas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request support from Atlas?</label>
    <type>Checkbox</type>
</CustomField>