force-app/main/default/objects/Log__c/fields/Request_Support_From_Team__c.field-meta.xml
<CustomField>
    <fullName>Request_Support_From_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request support from Team?</label>
    <type>Checkbox</type>
</CustomField>