force-app/main/default/objects/Log__c/fields/RequestSupportFromTeam__c.field-meta.xml
<CustomField>
    <fullName>RequestSupportFromTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request support from Team?</label>
    <type>Checkbox</type>
</CustomField>