force-app/main/default/objects/Log__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Client Life Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No enjoyment</fullName>
            </value>
            <value>
                <fullName>A little enjoyment</fullName>
            </value>
            <value>
                <fullName>Some enjoyment</fullName>
            </value>
            <value>
                <fullName>Rather much enjoyment</fullName>
            </value>
            <value>
                <fullName>Extreme amount of enjoyment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>