force-app/main/default/objects/Log__c/fields/SessionType__c.field-meta.xml
<CustomField>
    <fullName>SessionType__c</fullName>
    <label>Session Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>General Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>