force-app/main/default/objects/Log__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact submitting the log</description>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logs (Submitter)</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>