force-app/main/default/objects/Log__c/fields/SubmitterName__c.field-meta.xml
<CustomField>
    <fullName>SubmitterName__c</fullName>
    <description>Submitter Name</description>
    <label>Submitter Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>