force-app/main/default/objects/Log__c/fields/SupportDetails__c.field-meta.xml
<CustomField>
    <fullName>SupportDetails__c</fullName>
    <description>Details of team support request</description>
    <label>Support Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>