force-app/main/default/objects/Log__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Team the log is referring to</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>