force-app/main/default/objects/Log__c/fields/TeamFacilitator__c.field-meta.xml
<CustomField>
    <fullName>TeamFacilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Facilitator for a log</description>
    <label>Team Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logs (Team Facilitator)</relationshipLabel>
    <relationshipName>LogsTeamFacilitator</relationshipName>
    <type>Lookup</type>
</CustomField>