force-app/main/default/objects/Log__c/recordTypes/Clients.recordType-meta.xml
<RecordType>
    <fullName>Clients</fullName>
    <active>true</active>
    <description>Client log</description>
    <label>Clients</label>
</RecordType>