force-app/main/default/objects/Log__c/recordTypes/TeamFacilitator.recordType-meta.xml
<RecordType>
    <fullName>TeamFacilitator</fullName>
    <active>true</active>
    <description>Team Facilitator log</description>
    <label>Team Facilitator</label>
</RecordType>