force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Date__c</columns>
    <columns>Submitter__c</columns>
    <columns>Client__c</columns>
    <columns>Handler__c</columns>
    <columns>Dog__c</columns>
    <columns>Facilitator__c</columns>
    <columns>RequestSupportFromAtlas__c</columns>
    <columns>RequestSupportFromTeam__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>