force-app/main/default/objects/Log__c/listViews/Client.listView-meta.xml
<ListView>
    <fullName>Client</fullName>
    <columns>Date__c</columns>
    <columns>Submitter__c</columns>
    <columns>Client__c</columns>
    <columns>Handler__c</columns>
    <columns>Dog__c</columns>
    <columns>Facilitator__c</columns>
    <columns>RequestSupportFromAtlas__c</columns>
    <columns>RequestSupportFromTeam__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Log__c.Clients</value>
    </filters>
    <label>Client</label>
</ListView>